test/classes/initializers/siblingCall/inCobeginOn.comm-none.lm-numa.good
inCobeginOn.chpl:4: In initializer:
inCobeginOn.chpl:7: error: use of this.init() call in an on block
